# ML_project_M1

./: .gitignore  README.md  classification_maladie_cardiaque.py  gabriel_antoine_projet.html  gabriel_antoine_projet.py  heart_disease_classification.ipynb  heart_disease_classification.py  machine_learning_M1_project.ipynb  pyproject.toml  requirements.txt
