[project]
name = "ml-project-m1"
version = "1.0.0"
description = "Heart Disease Classification using Machine Learning - M1 Project"
authors = [
    { name = "Antoine Lucas" },
    { name = "Gabriel Besombes" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.6.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
